Update: Removed the birthday section

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ https://templatemo.com/tm-464-ultra-profile
 				<div class="col-md-6 col-sm-6">					
 					<h2 class="title">My <strong>Profile</strong></h2>
 					<p><span class="tm-info-label">Name</span> Adil Guluzade</p>
-					<p><span class="tm-info-label">Birthday</span> September 20, 2003</p>
+					<!-- <p><span class="tm-info-label">Birthday</span> September 20, 2003</p> -->
 					<p><span class="tm-info-label">Address</span> Markham, ON</p>
 					<p><span class="tm-info-label">Phone</span> +1 (647)-521-6452</p>
 					<p><span class="tm-info-label">Email</span> ad.guluzade@gmail.com</p>
