Updated background image to gif

--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@ https://templatemo.com/tm-464-ultra-profile
 			<div class="row">
 				<div class="col-md-2 col-sm-1"></div>
 				<div class="col-md-8 col-sm-10">
+					<img src="images/" alt="">
 					<h1 class="tm-home-title"><strong>Adil Guluzade</strong></h1>
 					<h2 class="tm-home-subtitle">Developer</h2>
 					<p>I am a Computer Science graduate who enjoys turning coffee into code and ideas into real-world applications.
 						I build software that works (most of the time), and genuinely love solving problems with tech. When I’m not coding, I’m probably debugging my life.</p>
-					<a href="#work" class="btn btn-default smoothScroll tm-view-more-btn">Let's Begin</a>
+					<!-- <a href="#work" class="btn btn-default smoothScroll tm-view-more-btn">Let's Begin</a> -->
 				</div>
 				<div class="col-md-2 col-sm-1"></div>
 			</div>
