--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 	<!-- SITE TITLE -->
-	<title>Adil Guluzade Portfolio</title>
+	<title>Adil Guluzade Portfolio</title> 
 
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -61,7 +61,7 @@ https://templatemo.com/tm-464-ultra-profile
 					<h2 class="tm-home-subtitle">Developer</h2>
 					<p>I am a Computer Science graduate who enjoys turning coffee into code and ideas into real-world applications.
 						I build software that works (most of the time), and genuinely love solving problems with tech. When I’m not coding, I’m probably debugging my life.</p>
-					<a href="#work" class="btn btn-default smoothScroll tm-view-more-btn">Let's Begin</a>
+					<!-- <a href="#work" class="btn btn-default smoothScroll tm-view-more-btn">Let's Begin</a> -->
 				</div>
 				<div class="col-md-2 col-sm-1"></div>
 			</div>
